# shaml

./: .gitignore  Cargo.toml
src/: authn_request.rs  idp_metadata.rs  lib.rs  response.rs  sp_metadata.rs  utils.rs
static/: canon2_response4.xml  canon_response4.xml  cert.csr  cert.pem  key.pem  okta.cert  okta_metadata.xml  okta_response.xml  privkey.pem  sample_request.xml  sample_response.xml  sample_response2.xml  sample_response3.xml  sample_response4.xml
